--- a/AI-Powered Personal Finance Tracker/index.html
+++ b/AI-Powered Personal Finance Tracker/index.html
@@ -47,9 +47,9 @@
             <canvas id="categoryChart" width="400" height="400"></canvas>
         </div>
         <section class="ai-advice">
-            <button>Get Ai advice</button>
-            <p id="adviceText">Your insights will appear here.</p>
+            <button id="get-advice">Get Ai advice</button>
+            <div id="advice-box"></div>
         </section>
-        <script src="app2.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
